src/components/TradingHistory/styles.module.scss
@import 'src/styles/helpers';

.history {
  height: 100%;
  padding: 32px;
  border: 1px solid $color-neutral-10;
  box-sizing: border-box;
  border-radius: $border-radius;
}

.chartFilter {
  @include flexbox(baseline, space-between);
  border-bottom: 1px solid $color-neutral-10;
  padding-bottom: 20px;

  .chartSelect {
    @include flexbox;
    & > * {
      &:first-child {
        margin-right: 12px;
      }
    }
  }
}

.tableWrapper {
  height: 80%;
  overflow-y: auto;
}

.soldOut {
  margin-top: 24px;
}

@include forDesktopBig {
  .chartAndBidders {
    flex-direction: column;
  }

  .history {
    width: 100%;
    flex-basis: unset;
  }

  .chartWrapper {
    height: unset;
  }
}

.tableHistoryCell {
  @include flexbox(center, space-between);
}

.tableWrapper::-webkit-scrollbar {
  height: 4px;
}

.tableWrapper::-webkit-scrollbar-track {
  background: linear-gradient(
    0deg,
    transparent 0%,
    transparent 20%,
    rgba(102, 214, 218, 0.4) 20%,
    rgba(102, 214, 218, 0.4) 80%,
    transparent 80%,
    transparent 100%
  );
}

.tableWrapper::-webkit-scrollbar-thumb {
  background: $color-action-default;
}

.tableWrapper::-webkit-scrollbar:vertical {
  width: 4px;
  height: auto;
}

.tableWrapper::-webkit-scrollbar-track:vertical {
  background: linear-gradient(
    90deg,
    transparent 0%,
    transparent 20%,
    rgba(102, 214, 218, 0.4) 20%,
    rgba(102, 214, 218, 0.4) 80%,
    transparent 80%,
    transparent 100%
  );
}

.tableWrapper::-webkit-scrollbar-thumb:vertical {
  background: $color-action-default;
}

